--- a/index.html
+++ b/index.html
@@ -2,10 +2,193 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Backrooms 3D</title>
-  <style> body { margin: 0; overflow: hidden; } </style>
+  <title>Backrooms with Textured Materials</title>
+  <style>
+    body { margin: 0; overflow: hidden; background: black; }
+    #instructions {
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      text-align: center;
+      font-size: 24px;
+      color: white;
+      font-family: sans-serif;
+      transform: translateY(-50%);
+      user-select: none;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-  <script type="module" src="main.js"></script>
+<div id="instructions">Click to Start</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/controls/PointerLockControls.js"></script>
+
+<script>
+const scene = new THREE.Scene();
+const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+const renderer = new THREE.WebGLRenderer();
+renderer.setSize(window.innerWidth, window.innerHeight);
+document.body.appendChild(renderer.domElement);
+
+const controls = new THREE.PointerLockControls(camera, document.body);
+document.getElementById("instructions").onclick = () => controls.lock();
+controls.addEventListener('lock', () => document.getElementById("instructions").style.display = 'none');
+controls.addEventListener('unlock', () => document.getElementById("instructions").style.display = '');
+controls.getObject().position.set(0, 2, 0);
+scene.add(controls.getObject());
+
+const light = new THREE.HemisphereLight(0xffffbb, 0x080820, 1.5);
+scene.add(light);
+
+const loader = new THREE.TextureLoader();
+const wallTex = loader.load('https://raw.githubusercontent.com/Loadbit6/Backrooms/main/textures/wall.jpeg');
+const floorTex = loader.load('https://raw.githubusercontent.com/Loadbit6/Backrooms/main/textures/floor.jpg');
+const ceilTex  = loader.load('https://raw.githubusercontent.com/Loadbit6/Backrooms/main/textures/ceiling.jpg');
+
+wallTex.wrapS = wallTex.wrapT = THREE.RepeatWrapping;
+floorTex.wrapS = floorTex.wrapT = THREE.RepeatWrapping;
+ceilTex.wrapS  = ceilTex.wrapT  = THREE.RepeatWrapping;
+
+function makeRGBMaterial(tex, r, g, b, repeatX, repeatY) {
+  return new THREE.ShaderMaterial({
+    uniforms: {
+      tex: { value: tex },
+      rMult: { value: r },
+      gMult: { value: g },
+      bMult: { value: b },
+      repeat: { value: new THREE.Vector2(repeatX, repeatY) }
+    },
+    vertexShader: `
+      varying vec2 vUv;
+      uniform vec2 repeat;
+      void main() {
+        vUv = uv * repeat;
+        gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
+      }
+    `,
+    fragmentShader: `
+      uniform sampler2D tex;
+      uniform float rMult;
+      uniform float gMult;
+      uniform float bMult;
+      varying vec2 vUv;
+      void main() {
+        vec4 color = texture2D(tex, vUv);
+        color.r *= rMult;
+        color.g *= gMult;
+        color.b *= bMult;
+        gl_FragColor = color;
+      }
+    `,
+    side: THREE.DoubleSide
+  });
+}
+
+const wallMat  = makeRGBMaterial(wallTex, 0.9, 0.8, 0.8, 2, 1);
+const floorMat = makeRGBMaterial(floorTex, 1.1, 1.1, 1.1, 8, 8);
+const ceilMat  = makeRGBMaterial(ceilTex, 0.75, 0.7, 0.4, 2, 2);
+ceilMat.side = THREE.DoubleSide;
+
+const collisionBoxes = [];
+function createWall(w, h, d, x, y, z, material) {
+  const geo = new THREE.BoxGeometry(w, h, d);
+  const mesh = new THREE.Mesh(geo, material);
+  mesh.position.set(x, y, z);
+  scene.add(mesh);
+  collisionBoxes.push(new THREE.Box3().setFromObject(mesh));
+}
+
+function createRoom() {
+  createWall(20, 1, 20, 0, 0, 0, floorMat);     // floor
+
+  // Adjust the ceiling's position closer to the player to remove the gap
+  const ceilGeo = new THREE.PlaneGeometry(20, 20);
+  const ceilMesh = new THREE.Mesh(ceilGeo, ceilMat);
+  ceilMesh.rotation.x = Math.PI / 2;
+  ceilMesh.position.y = 5;  // Adjust the y-position of the ceiling
+  scene.add(ceilMesh);
+  collisionBoxes.push(new THREE.Box3().setFromObject(ceilMesh));
+
+  createWall(1, 5, 20, -10, 2.5, 0, wallMat);
+  createWall(1, 5, 20,  10, 2.5, 0, wallMat);
+  createWall(20, 5, 1,  0, 2.5, -10, wallMat);
+  createWall(20, 5, 1,  0, 2.5, 10, wallMat);
+}
+createRoom();
+
+let moveForward = false, moveBackward = false, moveLeft = false, moveRight = false, canJump = false;
+const velocity = new THREE.Vector3(), direction = new THREE.Vector3();
+const gravity = 30, jumpStrength = 10, playerHeight = 1.8, speed = 1;
+
+document.addEventListener('keydown', e => {
+  if (e.code === 'KeyW') moveForward = true;
+  if (e.code === 'KeyS') moveBackward = true;
+  if (e.code === 'KeyA') moveLeft = true;
+  if (e.code === 'KeyD') moveRight = true;
+  if (e.code === 'Space' && canJump) {
+    velocity.y = jumpStrength;
+    canJump = false;
+  }
+});
+document.addEventListener('keyup', e => {
+  if (e.code === 'KeyW') moveForward = false;
+  if (e.code === 'KeyS') moveBackward = false;
+  if (e.code === 'KeyA') moveLeft = false;
+  if (e.code === 'KeyD') moveRight = false;
+});
+
+function checkCollision(pos) {
+  const size = new THREE.Vector3(1, playerHeight, 1);
+  const box = new THREE.Box3().setFromCenterAndSize(pos.clone().add(new THREE.Vector3(0, size.y / 2, 0)), size);
+  return collisionBoxes.some(other => box.intersectsBox(other));
+}
+
+const clock = new THREE.Clock();
+function animate() {
+  requestAnimationFrame(animate);
+  const delta = clock.getDelta();
+  velocity.y -= gravity * delta;
+
+  direction.set(Number(moveRight) - Number(moveLeft), 0, Number(moveBackward) - Number(moveForward)).normalize();
+  if (moveForward || moveBackward || moveLeft || moveRight) {
+    const moveVec = new THREE.Vector3(direction.x, 0, direction.z).applyQuaternion(camera.quaternion);
+    velocity.x -= moveVec.x * speed * 100 * delta;
+    velocity.z -= moveVec.z * speed * 100 * delta;
+  }
+
+  velocity.x -= velocity.x * 10.0 * delta;
+  velocity.z -= velocity.z * 10.0 * delta;
+
+  const pos = controls.getObject().position;
+  pos.x += -velocity.x * delta;
+  if (checkCollision(pos)) {
+    pos.x -= -velocity.x * delta;
+    velocity.x = 0;
+  }
+
+  pos.z += -velocity.z * delta;
+  if (checkCollision(pos)) {
+    pos.z -= -velocity.z * delta;
+    velocity.z = 0;
+  }
+
+  pos.y += velocity.y * delta;
+  if (checkCollision(pos)) {
+    pos.y -= velocity.y * delta;
+    velocity.y = 0;
+  }
+
+  if (pos.y < playerHeight) {
+    pos.y = playerHeight;
+    velocity.y = 0;
+    canJump = true;
+  }
+
+  renderer.render(scene, camera);
+}
+animate();
+</script>
 </body>
 </html>
