--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@ wallTex.wrapS = wallTex.wrapT = THREE.RepeatWrapping;
 floorTex.wrapS = floorTex.wrapT = THREE.RepeatWrapping;
 ceilTex.wrapS  = ceilTex.wrapT  = THREE.RepeatWrapping;
 
-function makeRGBMaterial(tex, r, g, b, repeatX, repeatY) {
-  return new THREE.ShaderMaterial({
+function makeRGBMaterial(tex, r, g, b, width, height) {
+  const material = new THREE.ShaderMaterial({
     uniforms: {
       tex: { value: tex },
       rMult: { value: r },
       gMult: { value: g },
       bMult: { value: b },
-      repeat: { value: new THREE.Vector2(repeatX, repeatY) }
+      repeat: { value: new THREE.Vector2(width, height) }
     },
     vertexShader: `
       varying vec2 vUv;
@@ -84,9 +84,14 @@ function makeRGBMaterial(tex, r, g, b, repeatX, repeatY) {
     `,
     side: THREE.DoubleSide
   });
+
+  // Adjust the texture repeat based on the surface size
+  tex.repeat.set(width, height); // Apply tile scaling based on surface size
+
+  return material;
 }
 
-const wallMat  = makeRGBMaterial(wallTex, 0.9, 0.8, 0.8, 2, 1);
+const wallMat  = makeRGBMaterial(wallTex, 0.9, 0.8, 0.8, 2, 3);
 const floorMat = makeRGBMaterial(floorTex, 1.1, 1.1, 1.1, 8, 8);
 const ceilMat  = makeRGBMaterial(ceilTex, 0.75, 0.7, 0.4, 2, 2);
 ceilMat.side = THREE.DoubleSide;
