--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ wallTex.wrapS = wallTex.wrapT = THREE.RepeatWrapping;
 floorTex.wrapS = floorTex.wrapT = THREE.RepeatWrapping;
 ceilTex.wrapS  = ceilTex.wrapT  = THREE.RepeatWrapping;
 
+// Function to create RGB material
 function makeRGBMaterial(tex, r, g, b, width, height) {
   const material = new THREE.ShaderMaterial({
     uniforms: {
@@ -86,9 +87,6 @@ function makeRGBMaterial(tex, r, g, b, width, height) {
     side: THREE.DoubleSide
   });
 
-  // Adjust the texture repeat dynamically based on the surface size
-  tex.repeat.set(width, height); // Apply tile scaling based on surface size
-
   return material;
 }
 
@@ -96,7 +94,6 @@ function makeRGBMaterial(tex, r, g, b, width, height) {
 const wallMat  = makeRGBMaterial(wallTex, 0.9, 0.8, 0.8, 2, 3);  // Wall with scaling based on surface size
 const floorMat = makeRGBMaterial(floorTex, 1.1, 1.1, 1.1, 8, 8);  // Floor with tiling 8x8
 const ceilMat  = makeRGBMaterial(ceilTex, 0.75, 0.7, 0.4, 2, 2);  // Ceiling with tiling 2x2
-ceilMat.side = THREE.DoubleSide;
 
 const collisionBoxes = [];
 function createWall(w, h, d, x, y, z, material) {
