--- a/index.html
+++ b/index.html
@@ -47,30 +47,66 @@ const wallTex = loader.load('https://raw.githubusercontent.com/Loadbit6/Backroom
 const floorTex = loader.load('https://raw.githubusercontent.com/Loadbit6/Backrooms/main/textures/floor.jpg');
 const ceilTex  = loader.load('https://raw.githubusercontent.com/Loadbit6/Backrooms/main/textures/ceiling.jpg');
 
-// Ensure tiling
 wallTex.wrapS = wallTex.wrapT = THREE.RepeatWrapping;
 floorTex.wrapS = floorTex.wrapT = THREE.RepeatWrapping;
 ceilTex.wrapS  = ceilTex.wrapT  = THREE.RepeatWrapping;
 
 function makeRGBMaterial(tex, r, g, b, repeatX, repeatY) {
-  return new THREE.MeshBasicMaterial({
-    map: tex,
-    side: THREE.DoubleSide,
-    color: new THREE.Color(r, g, b),
-    repeat: new THREE.Vector2(repeatX, repeatY)  // Correct repeat tiling
+  return new THREE.ShaderMaterial({
+    uniforms: {
+      tex: { value: tex },
+      rMult: { value: r },
+      gMult: { value: g },
+      bMult: { value: b },
+      repeat: { value: new THREE.Vector2(repeatX, repeatY) }
+    },
+    vertexShader: `
+      varying vec2 vUv;
+      uniform vec2 repeat;
+      void main() {
+        vUv = uv * repeat;
+        gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
+      }
+    `,
+    fragmentShader: `
+      uniform sampler2D tex;
+      uniform float rMult;
+      uniform float gMult;
+      uniform float bMult;
+      varying vec2 vUv;
+      void main() {
+        vec4 color = texture2D(tex, vUv);
+        color.r *= rMult;
+        color.g *= gMult;
+        color.b *= bMult;
+        gl_FragColor = color;
+      }
+    `,
+    side: THREE.DoubleSide
   });
 }
 
 const wallMat  = makeRGBMaterial(wallTex, 0.9, 0.8, 0.8, 2, 1);
 const floorMat = makeRGBMaterial(floorTex, 1.1, 1.1, 1.1, 8, 8);
 const ceilMat  = makeRGBMaterial(ceilTex, 0.75, 0.7, 0.4, 2, 2);
-
-// Make sure ceiling material is double-sided
 ceilMat.side = THREE.DoubleSide;
 
 const collisionBoxes = [];
+
 function createWall(w, h, d, x, y, z, material) {
   const geo = new THREE.BoxGeometry(w, h, d);
+
+  // Apply texture tiling per material repeat
+  const tileX = material.uniforms.repeat.value.x;
+  const tileY = material.uniforms.repeat.value.y;
+  const uvAttr = geo.attributes.uv;
+  for (let i = 0; i < uvAttr.count; i++) {
+    const u = uvAttr.getX(i);
+    const v = uvAttr.getY(i);
+    uvAttr.setXY(i, u * tileX, v * tileY);
+  }
+  uvAttr.needsUpdate = true;
+
   const mesh = new THREE.Mesh(geo, material);
   mesh.position.set(x, y, z);
   scene.add(mesh);
@@ -94,7 +130,7 @@ function createRoom() {
 }
 createRoom();
 
-// ✅ Load maze from your GitHub file
+// Load additional maze walls
 fetch('https://raw.githubusercontent.com/Loadbit6/Backrooms/7da3900a93c44841c52c9a9478076852d420b11d/maze.json')
   .then(response => response.json())
   .then(data => {
@@ -119,8 +155,8 @@ function animate() {
 
   if (controls.isLocked) {
     direction.set(0, 0, 0);
-    if (keys['KeyW']) direction.z -= 1;  // Forward
-    if (keys['KeyS']) direction.z += 1;  // Backward
+    if (keys['KeyW']) direction.z -= 1;
+    if (keys['KeyS']) direction.z += 1;
     if (keys['KeyA']) direction.x -= 1;
     if (keys['KeyD']) direction.x += 1;
 
@@ -131,7 +167,6 @@ function animate() {
     velocity.x = direction.x * speed * delta;
     velocity.z = direction.z * speed * delta;
 
-    // Movement aligned to camera
     const forward = new THREE.Vector3();
     controls.getDirection(forward);
     forward.y = 0;
@@ -140,12 +175,10 @@ function animate() {
     const right = new THREE.Vector3();
     right.crossVectors(forward, new THREE.Vector3(0, 1, 0)).normalize();
 
-    // Invert the Z axis to fix forward/backward movement
     const move = new THREE.Vector3();
-    move.addScaledVector(forward, -velocity.z);  // Negative velocity.z for correct movement direction
+    move.addScaledVector(forward, -velocity.z);
     move.addScaledVector(right, velocity.x);
 
-    // ✅ Slide along walls: check X and Z movement separately
     const currentPos = controls.getObject().position.clone();
 
     const tryX = currentPos.clone().add(new THREE.Vector3(move.x, 0, 0));
