--- a/index.html
+++ b/index.html
@@ -51,20 +51,22 @@ wallTex.wrapS = wallTex.wrapT = THREE.RepeatWrapping;
 floorTex.wrapS = floorTex.wrapT = THREE.RepeatWrapping;
 ceilTex.wrapS  = ceilTex.wrapT  = THREE.RepeatWrapping;
 
-function makeRGBMaterial(tex, r, g, b, repeatX, repeatY) {
+function makeRGBMaterial(tex, r, g, b) {
   return new THREE.ShaderMaterial({
     uniforms: {
       tex: { value: tex },
       rMult: { value: r },
       gMult: { value: g },
-      bMult: { value: b },
-      repeat: { value: new THREE.Vector2(repeatX, repeatY) }
+      bMult: { value: b }
     },
     vertexShader: `
       varying vec2 vUv;
-      uniform vec2 repeat;
       void main() {
-        vUv = uv * repeat;
+        vec3 scaleX = vec3(modelMatrix[0].x, modelMatrix[1].x, modelMatrix[2].x);
+        vec3 scaleY = vec3(modelMatrix[0].y, modelMatrix[1].y, modelMatrix[2].y);
+        float scaleU = length(scaleX);
+        float scaleV = length(scaleY);
+        vUv = uv * vec2(scaleU, scaleV);
         gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
       }
     `,
@@ -86,27 +88,13 @@ function makeRGBMaterial(tex, r, g, b, repeatX, repeatY) {
   });
 }
 
-const wallMat  = makeRGBMaterial(wallTex, 0.9, 0.8, 0.8, 2, 1);
-const floorMat = makeRGBMaterial(floorTex, 1.1, 1.1, 1.1, 8, 8);
-const ceilMat  = makeRGBMaterial(ceilTex, 0.75, 0.7, 0.4, 2, 2);
-ceilMat.side = THREE.DoubleSide;
+const wallMat  = makeRGBMaterial(wallTex, 0.9, 0.8, 0.8);
+const floorMat = makeRGBMaterial(floorTex, 1.1, 1.1, 1.1);
+const ceilMat  = makeRGBMaterial(ceilTex, 0.75, 0.7, 0.4);
 
 const collisionBoxes = [];
-
 function createWall(w, h, d, x, y, z, material) {
   const geo = new THREE.BoxGeometry(w, h, d);
-
-  // Apply texture tiling per material repeat
-  const tileX = material.uniforms.repeat.value.x;
-  const tileY = material.uniforms.repeat.value.y;
-  const uvAttr = geo.attributes.uv;
-  for (let i = 0; i < uvAttr.count; i++) {
-    const u = uvAttr.getX(i);
-    const v = uvAttr.getY(i);
-    uvAttr.setXY(i, u * tileX, v * tileY);
-  }
-  uvAttr.needsUpdate = true;
-
   const mesh = new THREE.Mesh(geo, material);
   mesh.position.set(x, y, z);
   scene.add(mesh);
@@ -115,13 +103,7 @@ function createWall(w, h, d, x, y, z, material) {
 
 function createRoom() {
   createWall(20, 1, 20, 0, 0, 0, floorMat); // floor
-
-  const ceilGeo = new THREE.PlaneGeometry(20, 20);
-  const ceilMesh = new THREE.Mesh(ceilGeo, ceilMat);
-  ceilMesh.rotation.x = Math.PI / 2;
-  ceilMesh.position.y = 5;
-  scene.add(ceilMesh);
-  collisionBoxes.push(new THREE.Box3().setFromObject(ceilMesh));
+  createWall(20, 1, 20, 0, 5, 0, ceilMat);  // ceiling
 
   createWall(1, 5, 20, -10, 2.5, 0, wallMat);
   createWall(1, 5, 20,  10, 2.5, 0, wallMat);
@@ -130,7 +112,7 @@ function createRoom() {
 }
 createRoom();
 
-// Load additional maze walls
+// ✅ Load maze from GitHub
 fetch('https://raw.githubusercontent.com/Loadbit6/Backrooms/7da3900a93c44841c52c9a9478076852d420b11d/maze.json')
   .then(response => response.json())
   .then(data => {
