--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ function makeRGBMaterial(tex, r, g, b, repeatX = 1, repeatY = 1) {
         color.r *= rMult;
         color.g *= gMult;
         color.b *= bMult;
-        gl_FragColor = color;
+        gl_FragColor = vec4(color.rgb, 1.0);
       }
     `,
     side: THREE.DoubleSide
@@ -91,17 +91,12 @@ function makeRGBMaterial(tex, r, g, b, repeatX = 1, repeatY = 1) {
 const wallBaseMat  = makeRGBMaterial(wallTex, 0.9, 0.8, 0.8, 2, 1);
 const floorMat = makeRGBMaterial(floorTex, 1.1, 1.1, 1.1, 8, 8);
 const ceilMat  = makeRGBMaterial(ceilTex, 0.75, 0.7, 0.4, 2, 2);
-ceilMat.side = THREE.DoubleSide;
 
 const collisionBoxes = [];
 function createWall(w, h, d, x, y, z, baseMaterial) {
   const geo = new THREE.BoxGeometry(w, h, d);
   const mat = baseMaterial.clone();
-
-  const horizontal = Math.max(w, d);
-  const vertical = h;
-
-  mat.uniforms.uvScale.value.set(horizontal / 2, vertical / 2);  // Adjust tiling per object
+  mat.uniforms.uvScale.value.set(w / 2, h / 2); // dynamic scaling
   const mesh = new THREE.Mesh(geo, mat);
   mesh.position.set(x, y, z);
   scene.add(mesh);
@@ -123,15 +118,22 @@ function createRoom() {
   createWall(20, 5, 1,  0, 2.5, -10, wallBaseMat);
   createWall(20, 5, 1,  0, 2.5, 10, wallBaseMat);
 }
-createRoom();
 
-fetch('https://raw.githubusercontent.com/Loadbit6/Backrooms/7da3900a93c44841c52c9a9478076852d420b11d/maze.json')
-  .then(res => res.json())
-  .then(data => {
-    data.forEach(wall => {
-      createWall(wall.w, wall.h, wall.d, wall.x, wall.y, wall.z, wallBaseMat);
+// Ensure all textures load before building
+Promise.all([
+  new Promise(res => wallTex.once('update', res)),
+  new Promise(res => floorTex.once('update', res)),
+  new Promise(res => ceilTex.once('update', res))
+]).then(() => {
+  createRoom();
+  fetch('https://raw.githubusercontent.com/Loadbit6/Backrooms/7da3900a93c44841c52c9a9478076852d420b11d/maze.json')
+    .then(res => res.json())
+    .then(data => {
+      data.forEach(wall => {
+        createWall(wall.w, wall.h, wall.d, wall.x, wall.y, wall.z, wallBaseMat);
+      });
     });
-  });
+});
 
 const velocity = new THREE.Vector3();
 const direction = new THREE.Vector3();
