--- a/index.html
+++ b/index.html
@@ -2,207 +2,68 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Backrooms Maze</title>
-  <style>
-    body { margin: 0; overflow: hidden; background: black; }
-    #instructions {
-      position: absolute;
-      top: 50%;
-      width: 100%;
-      text-align: center;
-      font-size: 24px;
-      color: white;
-      font-family: sans-serif;
-      transform: translateY(-50%);
-      user-select: none;
-      cursor: pointer;
-    }
-  </style>
+  <title>Backrooms Texture Fix</title>
+  <style>body { margin: 0; overflow: hidden; }</style>
 </head>
 <body>
-<div id="instructions">Click to Start</div>
+  <script type="module">
+    import * as THREE from 'https://cdn.skypack.dev/three';
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/controls/PointerLockControls.js"></script>
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+    camera.position.set(0, 1.6, 5);
 
-<script>
-const scene = new THREE.Scene();
-const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-const renderer = new THREE.WebGLRenderer();
-renderer.setSize(window.innerWidth, window.innerHeight);
-document.body.appendChild(renderer.domElement);
+    const renderer = new THREE.WebGLRenderer();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
 
-const controls = new THREE.PointerLockControls(camera, document.body);
-document.getElementById("instructions").onclick = () => controls.lock();
-controls.addEventListener('lock', () => document.getElementById("instructions").style.display = 'none');
-controls.addEventListener('unlock', () => document.getElementById("instructions").style.display = '');
-controls.getObject().position.set(0, 2, 0);
-scene.add(controls.getObject());
+    // Lighting
+    const ambient = new THREE.AmbientLight(0xffffff, 0.5);
+    const directional = new THREE.DirectionalLight(0xffffff, 1);
+    directional.position.set(10, 10, 10);
+    scene.add(ambient, directional);
 
-const light = new THREE.HemisphereLight(0xffffbb, 0x080820, 1.5);
-scene.add(light);
+    const loader = new THREE.TextureLoader();
 
-const loader = new THREE.TextureLoader();
-const wallTex = loader.load('https://raw.githubusercontent.com/Loadbit6/Backrooms/main/textures/wall.jpeg');
-const floorTex = loader.load('https://raw.githubusercontent.com/Loadbit6/Backrooms/main/textures/floor.jpg');
-const ceilTex  = loader.load('https://raw.githubusercontent.com/Loadbit6/Backrooms/main/textures/ceiling.jpg');
-
-wallTex.wrapS = wallTex.wrapT = THREE.RepeatWrapping;
-floorTex.wrapS = floorTex.wrapT = THREE.RepeatWrapping;
-ceilTex.wrapS  = ceilTex.wrapT  = THREE.RepeatWrapping;
-
-function makeRGBMaterial(tex, r, g, b, repeatX = 1, repeatY = 1) {
-  return new THREE.ShaderMaterial({
-    uniforms: {
-      tex: { value: tex },
-      rMult: { value: r },
-      gMult: { value: g },
-      bMult: { value: b },
-      repeat: { value: new THREE.Vector2(repeatX, repeatY) },
-      uvScale: { value: new THREE.Vector2(1, 1) }
-    },
-    vertexShader: `
-      varying vec2 vUv;
-      uniform vec2 repeat;
-      uniform vec2 uvScale;
-      void main() {
-        vUv = uv * uvScale * repeat;
-        gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
-      }
-    `,
-    fragmentShader: `
-      uniform sampler2D tex;
-      uniform float rMult;
-      uniform float gMult;
-      uniform float bMult;
-      varying vec2 vUv;
-      void main() {
-        vec4 color = texture2D(tex, vUv);
-        color.r *= rMult;
-        color.g *= gMult;
-        color.b *= bMult;
-        gl_FragColor = vec4(color.rgb, 1.0);
-      }
-    `,
-    side: THREE.DoubleSide
-  });
-}
-
-const wallBaseMat = makeRGBMaterial(wallTex, 0.9, 0.8, 0.8, 2, 1);
-const floorMat    = makeRGBMaterial(floorTex, 1.1, 1.1, 1.1, 8, 8);
-const ceilMat     = makeRGBMaterial(ceilTex, 0.75, 0.7, 0.4, 2, 2);
-
-const collisionBoxes = [];
-
-function applyDynamicUV(material, w, h, d = 1) {
-  const sizeX = w;
-  const sizeY = h > 1 ? h : d; // use depth for floors
-  const baseRepeat = material.uniforms.repeat.value;
-  material.uniforms.uvScale.value.set(sizeX / baseRepeat.x, sizeY / baseRepeat.y);
-}
-
-function createWall(w, h, d, x, y, z, baseMaterial) {
-  const geo = new THREE.BoxGeometry(w, h, d);
-  const mat = baseMaterial.clone();
-  applyDynamicUV(mat, w, h, d);
-  const mesh = new THREE.Mesh(geo, mat);
-  mesh.position.set(x, y, z);
-  scene.add(mesh);
-  collisionBoxes.push(new THREE.Box3().setFromObject(mesh));
-}
-
-function createRoom() {
-  // Floor
-  createWall(20, 1, 20, 0, 0, 0, floorMat);
-
-  // Ceiling
-  const ceilGeo = new THREE.PlaneGeometry(20, 20);
-  const ceilMesh = new THREE.Mesh(ceilGeo, ceilMat);
-  ceilMesh.rotation.x = Math.PI / 2;
-  ceilMesh.position.y = 5;
-  scene.add(ceilMesh);
-  collisionBoxes.push(new THREE.Box3().setFromObject(ceilMesh));
-  applyDynamicUV(ceilMat, ceilGeo.parameters.width, ceilGeo.parameters.height);
-
-  // Walls
-  createWall(1, 5, 20, -10, 2.5, 0, wallBaseMat);
-  createWall(1, 5, 20,  10, 2.5, 0, wallBaseMat);
-  createWall(20, 5, 1,  0, 2.5, -10, wallBaseMat);
-  createWall(20, 5, 1,  0, 2.5, 10, wallBaseMat);
-}
-
-// Ensure all textures load before building
-Promise.all([
-  new Promise(res => wallTex.once('update', res)),
-  new Promise(res => floorTex.once('update', res)),
-  new Promise(res => ceilTex.once('update', res))
-]).then(() => {
-  createRoom();
-  fetch('https://raw.githubusercontent.com/Loadbit6/Backrooms/7da3900a93c44841c52c9a9478076852d420b11d/maze.json')
-    .then(res => res.json())
-    .then(data => {
-      data.forEach(wall => {
-        createWall(wall.w, wall.h, wall.d, wall.x, wall.y, wall.z, wallBaseMat);
-      });
-    });
-});
-
-const velocity = new THREE.Vector3();
-const direction = new THREE.Vector3();
-const keys = {};
-document.addEventListener('keydown', e => keys[e.code] = true);
-document.addEventListener('keyup', e => keys[e.code] = false);
-
-function checkCollisions(pos) {
-  const box = new THREE.Box3().setFromCenterAndSize(pos, new THREE.Vector3(1, 2, 1));
-  return collisionBoxes.some(c => c.intersectsBox(box));
-}
-
-function animate() {
-  requestAnimationFrame(animate);
-
-  if (controls.isLocked) {
-    direction.set(0, 0, 0);
-    if (keys['KeyW']) direction.z -= 1;
-    if (keys['KeyS']) direction.z += 1;
-    if (keys['KeyA']) direction.x -= 1;
-    if (keys['KeyD']) direction.x += 1;
-
-    direction.normalize();
-    const speed = 1;
-    const delta = 0.1;
-
-    velocity.x = direction.x * speed * delta;
-    velocity.z = direction.z * speed * delta;
-
-    const forward = new THREE.Vector3();
-    controls.getDirection(forward);
-    forward.y = 0;
-    forward.normalize();
-
-    const right = new THREE.Vector3();
-    right.crossVectors(forward, new THREE.Vector3(0, 1, 0)).normalize();
-
-    const move = new THREE.Vector3();
-    move.addScaledVector(forward, -velocity.z);
-    move.addScaledVector(right, velocity.x);
-
-    const currentPos = controls.getObject().position.clone();
-
-    const tryX = currentPos.clone().add(new THREE.Vector3(move.x, 0, 0));
-    if (!checkCollisions(tryX)) {
-      controls.getObject().position.x = tryX.x;
+    function loadTiledTexture(url, width, height, tileSize = 2) {
+      const tex = loader.load(url);
+      tex.wrapS = tex.wrapT = THREE.RepeatWrapping;
+      tex.repeat.set(width / tileSize, height / tileSize);
+      tex.encoding = THREE.sRGBEncoding;
+      return tex;
     }
 
-    const tryZ = currentPos.clone().add(new THREE.Vector3(0, 0, move.z));
-    if (!checkCollisions(tryZ)) {
-      controls.getObject().position.z = tryZ.z;
-    }
-  }
+    // Floor
+    const floorWidth = 50;
+    const floorDepth = 50;
+    const floorTex = loadTiledTexture('https://i.imgur.com/c4d8QPa.jpeg', floorWidth, floorDepth);
+    const floorMat = new THREE.MeshStandardMaterial({ map: floorTex });
+    const floor = new THREE.Mesh(new THREE.PlaneGeometry(floorWidth, floorDepth), floorMat);
+    floor.rotation.x = -Math.PI / 2;
+    scene.add(floor);
 
-  renderer.render(scene, camera);
-}
-animate();
-</script>
+    // Wall
+    const wallWidth = 50;
+    const wallHeight = 3;
+    const wallTex = loadTiledTexture('https://i.imgur.com/lGfQp2p.jpeg', wallWidth, wallHeight);
+    const wallMat = new THREE.MeshStandardMaterial({ map: wallTex });
+    const wall = new THREE.Mesh(new THREE.PlaneGeometry(wallWidth, wallHeight), wallMat);
+    wall.position.set(0, wallHeight / 2, -25);
+    scene.add(wall);
+
+    // Ceiling
+    const ceilTex = loadTiledTexture('https://i.imgur.com/AkgRkNQ.jpeg', floorWidth, floorDepth);
+    const ceilMat = new THREE.MeshStandardMaterial({ map: ceilTex });
+    const ceiling = new THREE.Mesh(new THREE.PlaneGeometry(floorWidth, floorDepth), ceilMat);
+    ceiling.rotation.x = Math.PI / 2;
+    ceiling.position.y = 3;
+    scene.add(ceiling);
+
+    function animate() {
+      requestAnimationFrame(animate);
+      renderer.render(scene, camera);
+    }
+    animate();
+  </script>
 </body>
 </html>
